# sightcall_transcript_to_tutorial

./: .gitignore  Makefile  README.md  clone-and-install  compose.yml
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/sightcall_transcript_to_tutorial/: __init__.py  main.py
backend/sightcall_transcript_to_tutorial/application/commands/: generate_tutorial_command.py  login_command.py  update_tutorial_command.py  upload_transcript_command.py
backend/sightcall_transcript_to_tutorial/application/queries/: get_authenticated_user_query.py  get_tutorial_by_id_query.py  get_tutorials_query.py
backend/sightcall_transcript_to_tutorial/domain/config/: settings.py
backend/sightcall_transcript_to_tutorial/domain/entities/: __init__.py  authenticated_user.py  transcript.py  tutorial.py  user.py
backend/sightcall_transcript_to_tutorial/domain/exceptions/: tutorial_generation_error.py
backend/sightcall_transcript_to_tutorial/domain/gateways/: authentication_gateway_interface.py  tutorial_generator_gateway_interface.py
backend/sightcall_transcript_to_tutorial/domain/repositories/: __init__.py  transcript_repository_interface.py  tutorial_repository_interface.py  user_repository_interface.py
backend/sightcall_transcript_to_tutorial/domain/value_objects/: __init__.py  base_id.py  transcript_content.py  transcript_id.py  tutorial_id.py  user_id.py
backend/sightcall_transcript_to_tutorial/infrastructure/for_production/alembic/: env.py
backend/sightcall_transcript_to_tutorial/infrastructure/for_production/gateways/: github_authentication_gateway.py  openai_tutorial_generator_gateway.py
backend/sightcall_transcript_to_tutorial/infrastructure/for_production/models/: __init__.py  base.py  sqlalchemy_transcript.py  sqlalchemy_tutorial.py  sqlalchemy_user.py
backend/sightcall_transcript_to_tutorial/infrastructure/for_production/repositories/: sqlalchemy_transcript_repository.py  sqlalchemy_tutorial_repository.py  sqlalchemy_user_repository.py
backend/sightcall_transcript_to_tutorial/infrastructure/for_tests/gateways/: fake_authentication_gateway.py  fake_tutorial_generator_gateway.py
backend/sightcall_transcript_to_tutorial/infrastructure/for_tests/repositories/: fake_transcript_repository.py  fake_tutorial_repository.py  fake_user_repository.py
backend/sightcall_transcript_to_tutorial/presentation/api/: dependencies.py
backend/sightcall_transcript_to_tutorial/presentation/api/middlewares/: jwt_middleware.py
backend/sightcall_transcript_to_tutorial/presentation/api/routers/: auth.py  transcripts.py  tutorial.py
backend/sightcall_transcript_to_tutorial/presentation/api/schemas/: auth.py  transcript.py  tutorial.py
backend/tests/e2e/: test_auth_api.py  test_main.py  test_transcript_api.py  test_tutorial_api.py
backend/tests/integration/gateways/: test_github_authentication_gateway.py  test_openai_tutorial_generator_gateway.py
backend/tests/integration/repositories/: conftest.py  test_sqlalchemy_transcript_repository.py  test_sqlalchemy_tutorial_repository.py  test_sqlalchemy_user_repository.py
backend/tests/unit/application/commands/: test_generate_tutorial_command.py  test_login_command.py  test_update_tutorial_command.py  test_upload_transcript_command.py
backend/tests/unit/domain/entities/: test_authenticated_user.py  (+3 more)
(+83 files in other folders)
